# c_quick

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.c  ops.h
